# svsm

./: .gitignore  .gitmodules  .mailmap  404.html  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  FUZZING.md  INSTALL.md  LICENSE.MIT  Makefile  README.md  SECURITY.md  build  build.rs  index.html  lines.py  rust-toolchain.toml  stage2.lds  svsm-target.json  svsm.lds  taplo.toml  test.dot  uefivars.md
aproxy/: Cargo.toml
aproxy/src/: attest.rs  main.rs
aproxy/src/backend/: kbs.rs  kbs_test.rs  mod.rs
fuzz/: Cargo.toml  acpi-dict.txt
fuzz/fuzz_targets/: acpi.rs  alloc.rs  bitmap_allocator.rs  fs.rs  fw_meta.rs  insn.rs  page_alloc.rs
igvmbuilder/: Cargo.toml  README.md
igvmbuilder/src/: cmd_options.rs  cpuid.rs  firmware.rs  gpa_map.rs  igvm_builder.rs  igvm_firmware.rs  igvm_params.rs  main.rs  ovmf_firmware.rs  ovmfmeta.rs  paging.rs  platform.rs  sipi.rs  stage2_stack.rs  vmsa.rs
igvmmeasure/: Cargo.toml  README.md
igvmmeasure/src/: cmd_options.rs  id_block.rs  igvm_measure.rs  main.rs  page_info.rs  utils.rs
kernel/: Cargo.toml  build.rs
kernel/src/: address.rs  address.verus.rs  address_inner.verus.rs  async.rs  attest.rs  boot_params.rs  boot_stage2.rs  config.rs  console.rs  error.rs  fw_cfg.rs  fw_meta.rs  igvm_params.rs  io.rs  kernel_region.rs  lib.rs  log_buffer.rs  migrate.rs  persistence.rs  requests.rs  serial.rs  stage2.lds  stage2.rs  stage2_syms.rs  string.rs  svsm.lds  svsm.rs  svsm_console.rs  svsm_paging.rs  testing.rs  testutils.rs  types.rs  types.verus.rs
kernel/src/acpi/: tables.rs
kernel/src/alloc/: boxed.rs  mod.rs  unique.rs
kernel/src/attestation/: mod.rs  monitor.rs  process.rs
kernel/src/block/: api.rs  error.rs  mod.rs  virtio_blk.rs  virtio_blk_demo.rs
kernel/src/cpu/: apic.rs  control_regs.rs  cpuid.rs  cpuset.rs  debug_regs.rs  efer.rs  extable.rs  features.rs  gdt.rs  ghcb.rs  insn.rs  ipi.rs  irq_state.rs  isst.rs  line_buffer.rs  mem.rs  mod.rs  msr.rs  percpu.rs  registers.rs  shadow_stack.rs  smp.rs  sse.rs  tlb.rs  tss.rs  vc.rs  vmsa.rs
kernel/src/crypto/: mod.rs  rng.rs  rustcrypto.rs
kernel/src/debug/: gdbstub.rs  mod.rs  stacktrace.rs  symbols.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: api.rs  buffer.rs  console.rs  filesystem.rs  init.rs  log_buffer.rs  mod.rs  obj.rs  ramfs.rs
kernel/src/glibc_wrapper/: mod.rs
kernel/src/greq/: driver.rs  mod.rs  msg.rs  pld_report.rs  services.rs
kernel/src/hyperv/: hv.rs  mod.rs  msr.rs
kernel/src/insn_decode/: decode.rs  insn.rs  mod.rs  opcode.rs
kernel/src/locking/: common.rs  mod.rs  rwlock.rs  spinlock.rs
kernel/src/log_buffer/: mod.rs
kernel/src/migration/: guest_valid_bitmap.rs  migration.rs  mod.rs
kernel/src/mm/: address_space.rs  address_space.verus.rs  address_space_spec.verus.rs  alloc.rs  alloc.verus.rs  alloc_free.verus.rs  alloc_info.verus.rs  alloc_inner.verus.rs  alloc_perms.verus.rs  alloc_types.verus.rs  boxed.rs  global_memory.rs  guestmem.rs  mappings.rs  memory.rs  mod.rs  page_visibility.rs  pagebox.rs  pagetable.rs  ptguards.rs  ro_after_init.rs  transition_pgtable.rs  validate.rs  virtualrange.rs
kernel/src/my_crypto/: build.sh  my_crypto.c  my_crypto.h  run.sh  test
kernel/src/my_crypto_wrapper/: mod.rs
kernel/src/my_rsa/: build.sh  my_rsa  my_rsa.c
kernel/src/my_rsa_wrapper/: mod.rs
kernel/src/platform/: capabilities.rs  guest_cpu.rs  mod.rs  native.rs  snp.rs  snp_fw.rs  snp_requests.rs  tdp.rs
kernel/src/process_manager/: allocation.rs  call_handler.rs  memory_channels.rs  memory_helper.rs  mod.rs  process.rs  process_memory.rs  process_paging.rs
kernel/src/process_runtime/: runtime.rs
kernel/src/protocols/: apic.rs  attest.rs  attestation.rs  core.rs  errors.rs  memmap.rs  mod.rs  ocp.rs  process.rs  reboot.rs  uefivars.rs  vtpm.rs
kernel/src/sev/: caa.rs  ghcb.rs  hv_doorbell.rs  mod.rs  msr_protocol.rs  secrets_page.rs  snp_apic.rs  status.rs  tlb.rs  utils.rs  vmsa.rs
kernel/src/sp_pagetable/: mod.rs  tmp_mapping.rs
kernel/src/syscall/: class0.rs  class1.rs  class3.rs  handlers.rs  mod.rs  obj.rs
kernel/src/task/: exec.rs  mod.rs  pcid.rs  schedule.rs  task_mm.rs  tasks.rs  waiting.rs
kernel/src/tdx/: apic.rs  error.rs  mod.rs  tdcall.rs  ve.rs
kernel/src/utils/: bitmap_allocator.rs  fw_meta.rs  immut_after_init.rs  memory_region.rs  mod.rs  safe_ptr.rs  scoped.rs  string_ring_buffer.rs  tcb_ptr.rs  unsafe_copy.rs  util.proof.verus.rs  util.rs  util.verus.rs  valid_bitmap.rs  vec.rs
kernel/src/virtio/: devices.rs  error.rs  hal.rs  mmio.rs  mod.rs  slot.rs
kernel/src/vmm/: execloop.rs  message.rs  mod.rs  registers.rs
kernel/src/vsock/: api.rs  error.rs  mod.rs  stream.rs  virtio_vsock.rs
kernel/src/vtpm/: mod.rs  proxy.rs  reseal.rs  sealed.rs  sealed_store.rs  (+1 more)
lib/verify_external/: Cargo.toml
libaproxy/: Cargo.toml
libaproxy/src/: attestation.rs  lib.rs  negotiation.rs
paging/: Cargo.toml
paging/src/: address.rs  lib.rs  pagetable.rs  sizes.rs  traits.rs  util.rs  x86_64.rs
rlebits/: Cargo.toml  README.md  SYNC_STRATEGIES.md
rlebits/examples/: basic_usage.rs  global_thread_safe.rs  sync_benchmark.rs
rlebits/proptest-regressions/: lib.txt  lib_tests.txt
rlebits/src/: lib.rs  sync.rs
rlebits/tests/: integration_tests.proptest-regressions  integration_tests.rs
tools/aproxy/: Cargo.toml
tools/igvmbuilder/: Cargo.toml  README.md
tools/igvmmeasure/: Cargo.toml  README.md
user/init/: Cargo.toml  build.rs
user/lib/: Cargo.toml  module.lds
user/uapi_tester/: Cargo.toml  build.rs
verification/verus_stub/: Cargo.toml
verify_external/: Cargo.toml  build.rs
verify_external/src/: convert.verus.rs  lib.rs  ptr.verus.rs  vstd.verus.rs
verify_proof/: Cargo.toml  build.rs
verify_proof/src/: bits.verus.rs  frac_perm.rs  frac_ptr.rs  lib.rs  nonlinear.rs  set.rs
verus_stub/: Cargo.toml
verus_stub/src/: lib.rs
virtio-drivers/: Cargo.toml
virtio-drivers/src/: Cargo.toml  embedded_io.rs  hal.rs  lib.rs  queue.rs  volatile.rs
xbuild/: Cargo.toml
xbuild/src/: cargo.rs  features.rs  fs.rs  fw.rs  helpers.rs  igvm.rs  kernel.rs  main.rs  version.rs
(+9497 files in other folders)
