[workspace]
resolver = "2"
members = [
    # repo tooling
    "igvmbuilder",
    "igvmmeasure",
    # binary targets
    "kernel",
    # fuzzing
    "fuzz",
    # ELF loader
    "elf",
    # Microsoft TPM library
    "libmstpm",
    # syscall interface definitions
    "syscall",
]


[workspace.dependencies]
# internal library crates
bootlib = { path = "bootlib" }
cpuarch = { path = "cpuarch" }
test = { path = "test" }
svsm = { path = "kernel" }
elf = { path = "elf" }
libmstpm = { path = "libmstpm" }
syscall = { path = "syscall" }

# crates.io
aes-gcm = { version = "0.10.3", default-features = false }
arbitrary = "1.3.0"
bitfield-struct = "0.5"
bitflags = "2.4"
clap = { version = "4.4.14", default-features = false}
gdbstub = { version = "0.6.6", default-features = false }
gdbstub_arch = { version = "0.2.4" }
hmac-sha512 = "1.1.5"
igvm_defs = { version = "0.1.9", default-features = false}
igvm = { version = "0.1.9", default-features = false}
intrusive-collections = "0.9.6"
libfuzzer-sys = "0.4"
log = "0.4.17"
p384 = { version = "0.13.0" }
uuid = "1.6.1"
# Add the derive feature by default because all crates use it.
zerocopy = { version = "0.7.32", features = ["derive"] }

# other repos
packit = { git = "https://github.com/coconut-svsm/packit", version = "0.1.1" }

[workspace.lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
single_use_lifetimes = "warn"
trivial-numeric-casts = "deny"
unused-qualifications = "deny"

[workspace.lints.clippy]
await_holding_lock = "warn"
borrow_as_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_on_vec_items = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
# TODO: fires many times, fix then enable.
# undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
