[workspace]
resolver = "2"
members = [
    # repo tooling
    "igvmbuilder",
    "igvmmeasure",
    # binary targets
    "kernel",
    # fuzzing
    "fuzz",
    # ELF loader
    "elf",
    # Microsoft TPM library
    "libmstpm",
    # syscall interface definitions
    "syscall",
    # verification library for svsm
    "verismo",
]


[workspace.dependencies]
# internal library crates
bootlib = { path = "bootlib" }
cpuarch = { path = "cpuarch" }
test = { path = "test" }
svsm = { path = "kernel" }
elf = { path = "elf" }
libmstpm = { path = "libmstpm" }
syscall = { path = "syscall" }

# crates.io
aes-gcm = { version = "0.10.3", default-features = false }
arbitrary = "1.3.0"
bitfield-struct = "0.6.2"
bitflags = "2.4"
clap = { version = "4.4.14", default-features = false}
gdbstub = { version = "0.6.6", default-features = false }
gdbstub_arch = { version = "0.2.4" }
sha2 = "0.10.8"
igvm_defs = { version = "0.3.2", default-features = false}
igvm = { version = "0.3.2", default-features = false}
intrusive-collections = "0.9.6"
libfuzzer-sys = "0.4"
log = "0.4.17"
p384 = { version = "0.13.0" }
uuid = "1.6.1"
# Add the derive feature by default because all crates use it.
zerocopy = { version = "0.8.2", features = ["alloc", "derive"] }

# other repos
packit = { git = "https://github.com/coconut-svsm/packit", version = "0.1.1" }

# Verus repos
builtin = { git = "https://github.com/verus-lang/verus", rev ="0ee96be2", default-features = false }
builtin_macros = { git = "https://github.com/verus-lang/verus", rev ="0ee96be2", default-features = false  }
vstd = { git = "https://github.com/verus-lang/verus", rev ="0ee96be2", features = ["alloc"], default-features = false }

# Verification libs
verismo = { path = "verismo", default-features = false  }

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = 127 }
nonstandard_style = { level = "deny", priority = 126 }
rust_2018_idioms = { level = "deny", priority = 1 }
missing_debug_implementations = { level = "deny", priority = 50 }
single_use_lifetimes = { level = "warn", priority = 125 }
trivial-numeric-casts = { level = "deny", priority = 10 }

[workspace.lints.clippy]
await_holding_lock = "warn"
borrow_as_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_on_vec_items = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
# TODO: fires many times, fix then enable.
# undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"

[workspace.metadata.scripts]
vfmt = "verusfmt `find ./ -name *.verus.rs`"
