[package]
name = "aproxy"
version = "0.1.0"
edition = "2021"

[target.'cfg(all(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "cookies", "json"] }
kbs-types = "0.10.0"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5", features = ["derive"] }
libaproxy.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
