[package]
name = "igvmbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
bootlib.workspace = true

clap = { workspace = true, default-features = true, features = ["derive"] }
igvm_defs.workspace = true
igvm.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
