[package]
name = "igvmbuilder"
version = "0.1.0"
edition = "2021"

# specify dependencies' target to avoid feature unification with SVSM
# see https://doc.rust-lang.org/cargo/reference/features.html#feature-unification
[target.'cfg(all(target_os = "linux"))'.dependencies]
bootlib.workspace = true

clap = { workspace = true, default-features = true, features = ["derive"] }
igvm_defs.workspace = true
igvm.workspace = true
uuid.workspace = true
zerocopy.workspace = true
zerocopy07 = { package = "zerocopy", version = "0.7" }

[lints]
workspace = true
