[package]
name = "igvmmeasure"
version = "0.1.0"
edition = "2021"

# specify dependencies' target to avoid feature unification with SVSM
# see https://doc.rust-lang.org/cargo/reference/features.html#feature-unification
[target.'cfg(all(target_os = "linux"))'.dependencies]
clap = { workspace = true, default-features = true, features = ["derive"] }
sha2 = { workspace = true, default-features = true }
igvm.workspace = true
igvm_defs.workspace = true
p384.workspace = true
zerocopy.workspace = true
# igvm_defs still uses 0.7, so we need to import the zerocopy 0.7 traits to use them.
zerocopy07 = { package = "zerocopy", version = "0.7" }

[lints]
workspace = true
