[package]
name = "svsm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
libaproxy = { workspace = true, optional = true }
elf.workspace = true
syscall.workspace = true

aes = { workspace = true, optional = true }
aes-gcm = { workspace = true, features = ["aes", "alloc"] }
base64 = { workspace = true, optional = true, features = ["alloc"] }
bitfield-struct.workspace = true
bitflags.workspace = true
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }
igvm_defs = { workspace = true, features = ["unstable"] }
intrusive-collections.workspace = true
kbs-types = { workspace = true, optional = true, features = ["alloc"] }
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
p384 = { workspace = true, optional = true, features = ["alloc", "arithmetic", "ecdh", "jwk"] }
packit.workspace = true
rand_chacha = { workspace = true, optional = true }
rdrand = { workspace = true, optional = true }
libtcgtpm = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
serde_json = { workspace = true, optional = true, features = ["alloc"] }
# NOTE: The `force-soft` feature is required in sha2 to support this crate in a
#       no_std environment due to a LLVM issue with x86_64-unknown-none targets.
sha2 = { workspace = true, optional = true, features = ["force-soft"] }
zerocopy = { workspace = true, features = ["alloc", "derive"] }
release.workspace = true

builtin = { workspace = true, optional = true }
builtin_macros = { workspace = true }
vstd = { workspace = true }
verify_proof = { workspace = true, optional = true}
verify_external = { workspace = true, optional = true}

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[features]
attest = ["dep:aes", "dep:base64", "dep:kbs-types", "dep:libaproxy", "dep:p384",
          "dep:rand_chacha", "dep:rdrand", "dep:serde", "dep:serde_json",
          "dep:sha2"]
default = []
enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
vtpm = ["dep:libtcgtpm"]
nosmep = []
nosmap = []
verus_all = ["builtin", "verify_proof/verus", "verify_external/verus"]
verus = ["verus_all", "verify_proof/noverify", "verify_external/noverify"]
noverify = []

[dev-dependencies]

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
