[package]
name = "svsm"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
elf.workspace = true
syscall.workspace = true

aes-gcm = { workspace = true, features = ["aes", "alloc"] }
bitfield-struct.workspace = true
bitflags.workspace = true
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }
igvm_defs = { workspace = true, features = ["unstable"] }
intrusive-collections.workspace = true
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
packit.workspace = true
libtcgtpm = { workspace = true, optional = true }
zerocopy = { workspace = true, features = ["alloc", "derive"] }
release.workspace = true
# Need "force-soft", see https://github.com/RustCrypto/hashes/issues/446
sha2 = { workspace = true, features = ["force-soft"] }
uuid.workspace = true
virtio-drivers = { workspace = true, optional = true }

builtin = { workspace = true, optional = true }
vstd = { workspace = true, optional = true}
verify_proof = { workspace = true, optional = true}
verify_external = { workspace = true, optional = true}
verus_stub = { workspace = true }

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[features]
default = []
enable-gdb = ["dep:gdbstub", "dep:gdbstub_arch"]
vtpm = ["dep:libtcgtpm"]
nosmep = []
nosmap = []
verus_all = ["builtin", "vstd", "verify_proof/verus", "verify_external/verus", "verus_stub/disable"]
verus = ["verus_all", "verify_proof/noverify", "verify_external/noverify"]
noverify = []
virtio-drivers = ["dep:virtio-drivers"]

[dev-dependencies]
sha2 = { workspace = true, features = ["force-soft"] }

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
