[package]
name = "rlebits"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[features]
default = ["thread-safe"]
std = []
thread-safe = ["spin"]

[dependencies]
spin = { version = "0.9", optional = true }

[dev-dependencies]
proptest = "1.7.0"
rand = "0.9.2"

# Integration tests with required features
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Note: Use 'cargo test --features std,thread-safe' to run all tests including thread-safe tests
# Or use 'cargo test-all' alias for convenience
