[package]
name = "verify_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin = { workspace = true, optional = true }
builtin_macros = { workspace = true }
vstd = { workspace = true, optional = true }
state_machines_macros = { workspace = true }
paste = "1.0"
seq-macro = "0.3"

[lints]
workspace = true

[features]
default = []
noverify = []
verus = ["builtin", "vstd"]
