[package]
name = "aproxy"
version = "0.1.0"
edition.workspace = true

[target.'cfg(all(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "cookies", "json"] }
kbs-types.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = { workspace = true, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"
libaproxy.workspace = true
serde.workspace = true
serde_json.workspace = true
vsock = "0.5.1"

[lints]
workspace = true
