[package]
name = "igvmmeasure"
version = "0.1.0"
edition.workspace = true

# specify dependencies' target to avoid feature unification with SVSM
# see https://doc.rust-lang.org/cargo/reference/features.html#feature-unification
[target.'cfg(all(target_os = "linux"))'.dependencies]
base64 = { workspace = true, features = ["alloc"] }
clap = { workspace = true, default-features = true, features = ["derive"] }
sha2 = { workspace = true, default-features = true }
hex = { version = "0.4.3", features = ["alloc"] }
igvm.workspace = true
igvm_defs.workspace = true
p384.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
