[package]
name = "userinit"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "userinit"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = true
doctest = true

[dependencies]
userlib.workspace = true

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true
userlib = { workspace = true, features = ["test_runner"] }

[lints]
workspace = true
