[package]
name = "userlib"
version = "0.1.0"
edition.workspace = true

[dependencies]
syscall.workspace = true
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }

[target."x86_64-unknown-none".dependencies]
test = { workspace = true, optional = true }

[features]
default = []
test_runner = ["dep:test"]

[lints]
workspace = true
