[package]
name = "verus_stub"
version = "0.1.0"
edition = "2021"

[dependencies]

verus_builtin_macros = { workspace = true, optional = true }
vstd = { workspace = true, optional = true }
verus_macro_stub = { workspace = true, optional = true}

[features]
default = ["dep:verus_macro_stub"]
disable = ["verus_builtin_macros", "vstd"]

[lints]
workspace = true
