[package]
name = "verus_stub"
version = "0.1.0"
edition.workspace = true

[dependencies]

verus_builtin_macros = { workspace = true, optional = true }
vstd = { workspace = true, optional = true }
verus_macro_stub = { workspace = true }

[features]
default = []
disable = ["verus_builtin_macros", "vstd"]

[lints]
workspace = true
